# auto-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  process.md  pyproject.toml
docs/superpowers/plans/: 2026-07-22-task1-dataset-determination.md
docs/superpowers/specs/: 2026-07-22-dataset-determination-design.md  2026-07-22-task2-auto-evaluation-design.md
scripts/: batch_test_harness.py  data-viewer.html  verify_task1.py  verify_task2.py
src/harness/: __init__.py  agent.py  cli.py  config.py  data_tools.py  data_viewer.py  dataset.py  eval_tools.py  evaluate.py  provider.py  web.py
src/harness/tools/: base.py  registry.py
src/harness_nanobot_tools/: __init__.py
tests/: conftest.py  test_agent.py  test_data_tools.py  test_dataset.py  test_eval_tools.py  test_evaluate.py  test_find_categories.py  test_provider.py  test_registry.py
