[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-harness"
version = "0.1.0"
description = "harness 反馈与自进化平台（一期：自动化评测数据集的确定）"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
harness = "harness.cli:main"
harness-web = "harness.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."nanobot.tools"]
dataset_stats = "harness_nanobot_tools:DatasetStatsTool"
list_top_categories = "harness_nanobot_tools:ListTopCategoriesTool"
list_sub_intents = "harness_nanobot_tools:ListSubIntentsTool"
filter_queries = "harness_nanobot_tools:FilterQueriesTool"
sample_queries = "harness_nanobot_tools:SampleQueriesTool"
get_cluster = "harness_nanobot_tools:GetClusterTool"
evaluate_response = "harness_nanobot_tools:EvaluateResponseTool"
find_relevant_categories = "harness_nanobot_tools:FindRelevantCategoriesTool"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
